@@ -1,3 +1,8 @@
+2003-03-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03802] fix autoconf
+	* acinclude.m4 (AC_W3M_CHECK_VER): warn only
+
 2003-03-11  Yuji Abe <cbo46560@pop12.odn.ne.jp>
 
 	* [w3m-dev 03801] fix autoconf
